Stupid spacing fix

--- a/app/assets/_scss/component/_badges.scss
+++ b/app/assets/_scss/component/_badges.scss
@@ -44,6 +44,10 @@
       .progress-bar {
         width: 70px;
       }
+      .badge-text {
+        width: 70%;
+        top: -4px;
+      }
     }
   }
 }
